Migrate project to TypeScript and refine Header component.
The project has been migrated from JavaScript to TypeScript for improved typing and scalability. The Header component has also been revised to allow dynamic text color changes based on the `darkBg` property. Additionally, some style adjustments and file relocations have been made for better structure and readability.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,5 @@
 $primary: #d30855;
+$dark: #1a1a1a;
 
 @import "~bootstrap/scss/bootstrap";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,800");
@@ -7,8 +8,7 @@ body {
     font-family: 'Open Sans', sans-serif !important;
 }
 
-.bg-custom-dark {
-    background: #1a1a1a;
+.bg-dark {
     color: white;
 }
 
