Update Header component and add new styles
The Header component has been made sticky and some padding styles have been adjusted. In addition, new styles have been added to the SCSS file for the `bg-image-main` class, and these have been applied to the Welcome and PageSection components. The `whiteSection` prop in PageSection has been replaced with a more versatile `background` prop.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -56,3 +56,9 @@ body {
 textarea {
     resize: none;
 }
+
+.bg-image-main {
+    background-image: url("/public/img/banner_front_01.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
