Added Registration - First implementation
Added first implementation of multi step form, basic working example and will be changed to match our style / needs in future iterations

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -62,3 +62,7 @@ textarea {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.full-h {
+    height: calc(100vh - (96px + 152px));
+}
