Refactor code structure and add multistep form
A significant overhaul of the project with changes including updates to packages, the implementation of a multistep form and necessary additions and deletions of files. These new additions provide an increased functionality to the existing system.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -64,5 +64,10 @@ textarea {
 }
 
 .full-h {
-    height: calc(100vh - (96px + 152px));
+    height: auto;
+    min-height: calc(100vh - (96px + 152px));
+}
+
+.item {
+
 }
