Refactor JobSearch and Welcome pages for improved responsiveness
The commit refactors styles and structures in JobSearch and Welcome pages to enhance responsiveness. The `CardContainer` styled component has been replaced with divs bearing responsive bootstrap classes. Styling rules and structure within `JobCard` have also been changed to make the card responsive. These changes improve the pages' layout and design on smaller screens.

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -62,12 +62,14 @@ textarea {
     min-height: calc(100vh - (96px + 152px));
 }
 
-.card-grow {
-    transition: transform ease-in-out 250ms;
+@media (min-width: 768px) {
+    .card-grow {
+        transition: transform ease-in-out 250ms;
 
-    &:hover {
-        cursor: pointer !important;
-        transform: scale(1.05) !important;
+        &:hover {
+            cursor: pointer !important;
+            transform: scale(1.05) !important;
+        }
     }
 }
 
