--- a/resources/scss/tiptap.scss
+++ b/resources/scss/tiptap.scss
@@ -1,5 +1,13 @@
 /* Basic editor styles */
 .tiptap {
+    min-height: 10rem;
+    padding: 10px;
+
+    p {
+        margin: 0;
+        padding: 0;
+    }
+
     :first-child {
         margin-top: 0;
     }
@@ -16,76 +24,37 @@
         }
     }
 
-    /* Heading styles */
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        line-height: 1.1;
-        margin-top: 2.5rem;
-        text-wrap: pretty;
-    }
-
-    h1,
-    h2 {
-        margin-top: 3.5rem;
-        margin-bottom: 1.5rem;
-    }
-
-    h1 {
-        font-size: 1.4rem;
-    }
-
-    h2 {
-        font-size: 1.2rem;
-    }
-
-    h3 {
-        font-size: 1.1rem;
-    }
-
-    h4,
-    h5,
-    h6 {
-        font-size: 1rem;
-    }
-
-    /* Code and preformatted text styles */
-    code {
-        background-color: var(--purple-light);
-        border-radius: 0.4rem;
-        color: var(--black);
-        font-size: 0.85rem;
-        padding: 0.25em 0.3em;
-    }
-
-    pre {
-        background: var(--black);
-        border-radius: 0.5rem;
-        color: var(--white);
-        font-family: 'JetBrainsMono', monospace;
-        margin: 1.5rem 0;
-        padding: 0.75rem 1rem;
-
-        code {
-            background: none;
-            color: inherit;
-            font-size: 0.8rem;
-            padding: 0;
-        }
-    }
-
-    blockquote {
-        border-left: 3px solid var(--gray-3);
-        margin: 1.5rem 0;
-        padding-left: 1rem;
-    }
 
     hr {
         border: none;
         border-top: 1px solid var(--gray-2);
         margin: 2rem 0;
+    }
+
+    p.is-editor-empty:first-child::before {
+        color: var(--gray-4);
+        content: attr(data-placeholder);
+        float: left;
+        height: 0;
+        pointer-events: none;
+    }
+
+    /* Character count */
+    .character-count {
+        align-items: center;
+        color: var(--gray-5);
+        display: flex;
+        font-size: 0.75rem;
+        gap: .5rem;
+        margin: 1.5rem;
+
+        svg {
+            color: var(--purple);
+        }
+
+        &--warning,
+        &--warning svg {
+            color: var(--red);
+        }
     }
 }
